# root2csv

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README_dev.md  pyproject.toml  requirements.txt
root2csv/: __init__.py  __main__.py  cli.py  converter.py  graphs.py  logging_config.py  trees.py  utils.py
